[package]
name = "file_env_const"
version = "0.1.0"
edition = "2021"
description = "macros for loading data from files or environment variables at compile time"
repository = "https://github.com/tveness/file_env_const"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = "2.0.38"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
